tests/errors/se_badindent2.pyx
def f():
	a = b
		c = d
_ERRORS = u"""
/Local/Projects/D/Pyrex/Source/Tests/Errors1/se_badindent2.pyx:3:0: Possible inconsistent indentation
/Local/Projects/D/Pyrex/Source/Tests/Errors1/se_badindent2.pyx:3:0: Expected an identifier or literal
"""
